--- a/5-website-building/coffee-shop_/index.html
+++ b/5-website-building/coffee-shop_/index.html
@@ -5,34 +5,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coffee Shop Website Example</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <div id="mobile-menu">
-    <a id="close-btn" href="#"><img class="img-fluid" src="img/close-btn.png" alt="close"></a>
+    <a id="close-btn" href="#"><img src="img/close-btn.png" alt="close"></a>
     <div class="container">
       <div class="row vh-100 align-items-center">
         <div class="col-12 text-center">
           <nav>
-            <div><a class="mobile-menu-item text-decoration-none text-uppercase h3" href="#intro-section">about</a>
+            <div>
+              <a class="mobile-menu-item text-decoration-none text-uppercase h3" href="#intro-section">about</a>
             </div>
-            <div class="my-3"><a class="mobile-menu-item text-decoration-none text-uppercase h3"
-                href="#menu-section">products</a></div>
-            <div class="mb-3"><a class="mobile-menu-item text-decoration-none text-uppercase h3"
-                href="#contact-info-section">contact</a></div>
-            <div><a class="mobile-menu-item text-decoration-none text-uppercase h3" href="#map-section">how to find
-                us?</a></div>
+            <div class="my-3">
+              <a class="mobile-menu-item text-decoration-none text-uppercase h3" href="#menu-section">products</a>
+            </div>
+            <div class="mb-3">
+              <a class="mobile-menu-item text-decoration-none text-uppercase h3"
+                href="#contact-info-section">contact</a>
+            </div>
+            <div>
+              <a class="mobile-menu-item text-decoration-none text-uppercase h3" href="#map-section">how to find
+                us?</a>
+            </div>
           </nav>
         </div>
       </div>
     </div>
   </div>
 
-  <header id="header" class="p-3">
+  <header class="p-3" id="header">
     <div class="container-fluid">
       <div class="row">
         <div class="col-4">
@@ -297,7 +305,7 @@
           }
         }
       });
-      
+
     });
   </script>
 </body>
