--- a/6-advanced-javascript-programming/10_advanced_promise/fetch_example/index.html
+++ b/6-advanced-javascript-programming/10_advanced_promise/fetch_example/index.html
@@ -61,7 +61,7 @@
 
       loader.style.display = "inline-block";
 
-      fetch('https://gogson77.github.io/gordankranjcic/pages/development.html').then(function(response){
+      fetch('https://v-dresevic.github.io/Advanced-JavaScript-Programming/data/text.txt').then(function(response){
 
         if(response.status !== 200){
           throw new Error("Error while reading file.")
