--- a/6-advanced-javascript-programming/assignment_01/index.html
+++ b/6-advanced-javascript-programming/assignment_01/index.html
@@ -4,9 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Assignment - Šablon za kreiranje objekata studenata
-
-  </title>
+  <title>Assignment - Šablon za kreiranje objekata studenata</title>
 </head>
 
 <body>
