--- a/8-data-access/05_json_parse/index.html
+++ b/8-data-access/05_json_parse/index.html
@@ -11,6 +11,7 @@
   <script>
 
     var json = '[{"username":"user1","password":"gf^^$%bb%4","dateTimeCreated":"1587290213832"},{"username":"user2","password":"*(&%$$fff33ff","dateTimeCreated":"1382290314831"}]';
+
     var data = JSON.parse(json, (key, value) => {
 
       if(key === 'dateTimeCreated'){
@@ -22,14 +23,15 @@
     });
 
 
-    /*     var json = '{"countries":[{"countryCode":"sr","name":"Serbia","capital":"Belgrade","description":"Serbia is..."},{"countryCode":"fr","name":"France","capital":"Paris","description":"France is..."}]}';
+        var json = '{"countries":[{"countryCode":"sr","name":"Serbia","capital":"Belgrade","description":"Serbia is..."},{"countryCode":"fr","name":"France","capital":"Paris","description":"France is..."}]}';
+        
         var data = JSON.parse(json);
     
         for (let i = 0; i < data.countries.length; i++) {
           document.body.innerHTML += '<h2>' + data.countries[i].name + '</h2>';
           document.body.innerHTML += '<p>Capital: ' + data.countries[i].capital + '</p>';
           document.body.innerHTML += '<p>Description: ' + data.countries[i].description + '</p>';
-        } */
+        }
   </script>
 </body>
 
